[fix] hide scrollbar in textareas when it's not needed

--- a/public/style.css
+++ b/public/style.css
@@ -399,7 +399,7 @@ option:checked {
   height: 35vh;
   min-height: 10rem;
   font-size: 1.2rem;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-color: var(--theme-main) var(--theme-light);
   scrollbar-width: thin;
 }
